[package]
name = "j-lang"
version = "0.1.0"
edition = "2021"
authors = ["J Language Team"]
description = "J Programming Language - A modern, safe, fast, and productive language"
license = "MIT"
repository = "https://github.com/j-lang/j"
keywords = ["programming-language", "compiler", "jit", "interpreter"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "j"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
# LLVM dependencies for compilation (optional)
inkwell = { version = "0.4", features = ["llvm10-0"], optional = true }
# JIT dependencies (optional)
cranelift = { version = "0.95", optional = true }
cranelift-jit = { version = "0.95", optional = true }
cranelift-module = { version = "0.95", optional = true }
target-lexicon = { version = "0.12", optional = true }
# File watching for hot reload (optional)
notify = { version = "6.0", optional = true }
# Async runtime (optional)
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
llvm = ["inkwell"]
jit = ["cranelift", "cranelift-jit", "cranelift-module", "target-lexicon", "notify"]
async = ["tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true